fix header height on firefox

--- a/patches/moveUserOptionsToHeader/styles.css
+++ b/patches/moveUserOptionsToHeader/styles.css
@@ -101,4 +101,8 @@
     .header__logo-product > img {
         width: auto !important;
     }
+
+    header.app__header {
+        height: 60px;
+    }
 }
